...
        Surface(modifier = Modifier.fillMaxSize(), color = MaterialTheme.colorScheme.background) {
            Mavericks.initialize(LocalContext.current)
            WordDetail.Page(
                viewModel = WordDetailVMImpl(
                    WordDetailState(), repository = object : WordRepository {
                        private val words = FakeWord().wordData
                        override val wordHistory = MutableStateFlow(listOf("aaa", "bbb"))
                        override val currentLayer = MutableStateFlow(0)
                        override val currentWord = MutableStateFlow("")
                        override val details = MutableStateFlow(words)
                        override suspend fun push(key: WordKey) {}
                        override suspend fun pop(): Boolean = true
                        override suspend fun searchFor(word: String) =
...
